--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@danielhaim/RandomUtil",
+  "name": "@danielhaim/randomutil",
   "version": "1.0.0",
   "description": "An NPM package for easily populating DOM elements with random data, perfect for testing and prototyping web interfaces. Supports various data types including text, images, avatars, and dates.",
   "keywords": [
     "lorem ipsum",
     "lorem ipsum generator"
   ],
-  "homepage": "https://github.com/danielhaim1/RandomUtil#readme",
+  "homepage": "https://github.com/danielhaim1/randomutil#readme",
   "bugs": {
-    "url": "https://github.com/danielhaim1/RandomUtil/issues"
+    "url": "https://github.com/danielhaim1/randomutil/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danielhaim1/RandomUtil.git"
+    "url": "git+https://github.com/danielhaim1/randomutil.git"
   },
   "license": "MIT",
   "author": {
