--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build": "npx webpack --mode production",
     "release": "npm version patch && npm run build && git add -A && git commit -m 'Release: v$(node -p \"require('./package.json').version\")' && git push && npm publish",
+    "watch": "nodemon --watch src/**/*.js --exec npm run build",
     "test": "jest",
     "tree": "tree -a -I 'node_modules|.git'"
   },
@@ -54,6 +55,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-environment-puppeteer": "^9.0.0",
     "jest-puppeteer": "^9.0.0",
+    "nodemon": "^3.0.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
