--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "scripts": {
     "build": "npx webpack --mode production",
     "release": "npm version patch && npm run build && git add -A && git commit -m 'Release: v$(node -p \"require('./package.json').version\")' && git push && npm publish",
+    "release-major": "npm version major && npm run build && git add -A && git commit -m 'Major Release: v$(node -p \"require('./package.json').version\")' && git push && npm publish",
+    "release-minor": "npm version minor && npm run build && git add -A && git commit -m 'Minor Release: v$(node -p \"require('./package.json').version\")' && git push && npm publish",
     "watch": "nodemon --watch src/**/*.js --exec npm run build",
     "test": "jest",
     "tree": "tree -a -I 'node_modules|.git|.DS_Store'"
@@ -49,17 +51,17 @@
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "esbuild-jest": "^0.5.0",
-    "exports-loader": "^4.0.0",
+    "exports-loader": "^5.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-environment-puppeteer": "^9.0.0",
-    "jest-puppeteer": "^9.0.0",
+    "jest-environment-puppeteer": "^10.0.1",
+    "jest-puppeteer": "^10.0.1",
     "nodemon": "^3.0.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "puppeteer": "^21.7.0",
-    "puppeteer-core": "^21.7.0",
+    "puppeteer": "^22.1.0",
+    "puppeteer-core": "^22.1.0",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
