--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "1.1.0",
   "description": "An NPM package for easily populating DOM elements with random data, perfect for testing and prototyping web interfaces. Supports various data types including text, images, avatars, and dates.",
   "keywords": [
-    "lorem ipsum",
-    "lorem ipsum generator"
+    "random content generator",
+    "dynamic color generator",
+    "random date generator",
+    "date formatting",
+    "generate random titles",
+    "generate random excerpts",
+    "random image generator",
+    "avatar generator",
+    "dynamic UI elements",
+    "frontend utilities",
+    "web development tools",
+    "JavaScript utilities"
   ],
   "homepage": "https://github.com/danielhaim1/randomutil#readme",
   "bugs": {
